tests/typing/bad/testfile-nil-6.go
package main

func f() *int { var p = nil; return p }
func main() { }
